k8s/jcode-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jcode-backend
  namespace: watcher
  labels:
    app: jcode-backend
spec:
  selector:
    matchLabels:
      app: jcode-backend
  template:
    metadata:
      labels:
        app: jcode-backend
    spec:
      dnsConfig:
        options:
        - name: ndots
          value: "2"
      imagePullSecrets:
      - name: watcher-harbor-registry-secret
      containers:
      - name: jcode-backend
        image: harbor.jedutools.io/jdevops/jcode-backend:REPLACE_WITH_COMMIT_SHA
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 36
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 20
          failureThreshold: 3
        resources:
          requests:
            cpu: "1"
            memory: 1.5Gi
          limits:
            memory: 10Gi
        volumeMounts:
        - name: jcode-backend-tmp
          mountPath: /tmp
        - name: jcode-backend-logs
          mountPath: /logs
      volumes:
      - name: jcode-backend-tmp
        emptyDir: {}
      - name: jcode-backend-logs
        persistentVolumeClaim:
          claimName: jcode-backend-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jcode-backend
  namespace: watcher
  labels:
    app: jcode-backend
spec:
  selector:
    app: jcode-backend
  ports:
  - name: http-metrics
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
